--- a/_layouts/template.html
+++ b/_layouts/template.html
@@ -11,8 +11,8 @@
         <div id="container">
             <nav id="main-navbar">
                 <ul>
-                    <li style="padding-left: 0px;"><a id="about" class="nav-item selected" href="/">About</a></li>
-                    <li><a id="experiences" class="nav-item" href="experiences">Experiences</a></li>
+                    <li style="padding-left: 0px;"><a id="about" class="nav-item selected" href="/favicon">About</a></li>
+                    <li><a id="experiences" class="nav-item" href="experiences">Experiences 2</a></li>
                 </ul>
             </nav>
             {{ content }}
