--- a/static/css/main.css
+++ b/static/css/main.css
@@ -17,13 +17,13 @@ body {
   width:860px;
 }
 
-.container::-webkit-scrollbar {
+::-webkit-scrollbar {
     width: 20px;
 }
-.container::-webkit-scrollbar-track {
+::-webkit-scrollbar-track {
     border-radius: 100px;
 }
-.container::-webkit-scrollbar-thumb {
+::-webkit-scrollbar-thumb {
     border-radius: 100px;
     border: 5px solid transparent;
     background-clip: content-box;
