--- a/static/css/main.css
+++ b/static/css/main.css
@@ -27,7 +27,7 @@ body {
     border-radius: 100px;
     border: 5px solid transparent;
     background-clip: content-box;
-    background-color: rgba(81, 203, 238, 1);
+    background-color: rgba(80, 216, 144);
 }
 
 /* MAIN TITLE */
