--- a/static/css/experiences.css
+++ b/static/css/experiences.css
@@ -79,7 +79,7 @@
     transition: all 250ms ease-in-out;
 }
 
-.rb-container ul.rb li.rb-item a:hover .rb-container ul.rb li::before {
+.rb-container ul.rb li.rb-item:has(a:hover) ::before {
     border-color: #fff;
     background: #fff;
 }
