--- a/_layouts/template.html
+++ b/_layouts/template.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
     <head>
-        <link rel="shortcut icon" type="image/x-icon" href="favicon.ico">
+        <link rel="shortcut icon" type="image/x-icon" href="{{ 'favicon.ico' | relative_url }}">
         <link rel="stylesheet" href="./static/css/main.css">
         <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
         <script defer src="./static/js/select_navbar.js" type="text/javascript"></script>
