--- a/_layouts/template.html
+++ b/_layouts/template.html
@@ -1,6 +1,7 @@
 <!DOCTYPE html>
 <html>
     <head>
+        <!-- <title>About | Balint Biro</title> -->
         <link rel="shortcut icon" type="image/png" href="{{ 'favicon.png' | relative_url }}">
         <link rel="stylesheet" href="./static/css/main.css">
         <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
@@ -17,5 +18,6 @@
             </nav>
             {{ content }}
         </div>
+        <h2>{{ page.title | default: site.title }}</h2>
     </body>
 </html>
