--- a/_layouts/template.html
+++ b/_layouts/template.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
     <head>
-        <!-- <title>About | Balint Biro</title> -->
+        <title>{{ page.title | default: site.title }}</title>
         <link rel="shortcut icon" type="image/png" href="{{ 'favicon.png' | relative_url }}">
         <link rel="stylesheet" href="./static/css/main.css">
         <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
@@ -18,6 +18,5 @@
             </nav>
             {{ content }}
         </div>
-        <h2>{{ page.title | default: site.title }}</h2>
     </body>
 </html>
