check on titles

--- a/_layouts/template.html
+++ b/_layouts/template.html
@@ -16,6 +16,8 @@
                     <li><a id="experiences" class="nav-item" href="experiences">Experiences</a></li>
                 </ul>
             </nav>
+            {{ page.title }}
+            {{ site.title }}
             {{ content }}
         </div>
     </body>
