--- a/static/css/experiences.css
+++ b/static/css/experiences.css
@@ -137,3 +137,44 @@ ul.rb li .timestamp {
     display: block;
     visibility: visible;
 }
+
+#group-of-details{
+    padding-left: 2px;
+    padding-right: 2px;
+    padding-top: 4px;
+    display: flex;
+}
+  
+.detail-category {
+    height: 42px;
+    width: 100%;
+    line-height: 42px;
+    text-align: center;
+    position: relative;
+    border-radius: 5px 5px 0 0;
+    text-decoration: none;
+    color: rgba(137, 148, 153, 1);
+}
+  
+.detail-category:hover{
+    color: white;
+}
+  
+.detail-category.selected {
+    background-color: #181c21;
+    color: rgba(80, 216, 144);
+}
+  
+.tab-content {
+    display: none;
+    line-height: 25px;
+    padding: 16px;
+    background: #181c21;
+    margin-left: 2px;
+    margin-right: 2px;
+    border-radius: 0 5px 5px 5px;
+}
+  
+.tab-content.displayed{
+    display: block;
+}
