--- a/static/css/experiences.css
+++ b/static/css/experiences.css
@@ -151,7 +151,7 @@ ul.rb li .timestamp {
     line-height: 42px;
     text-align: center;
     position: relative;
-    border-radius: 5px 5px 0 0;
+    border-radius: 10px 10px 0 0;
     text-decoration: none;
     color: rgba(137, 148, 153, 1);
 }
@@ -172,9 +172,20 @@ ul.rb li .timestamp {
     background: #181c21;
     margin-left: 2px;
     margin-right: 2px;
-    border-radius: 0 5px 5px 5px;
 }
-  
+
+.tab-content[id$="responsibilities"] {
+    border-radius: 0 10px 10px 10px;
+}
+
+.tab-content[id$="responsibilities"] {
+    border-radius: 10px 10px 10px 10px;
+}
+
+.tab-content[id$="responsibilities"] {
+    border-radius: 10px 0 10px 10px;
+}
+
 .tab-content.displayed{
     display: block;
 }
