--- a/_layouts/template.html
+++ b/_layouts/template.html
@@ -4,6 +4,7 @@
         <title>{{ page.title | default: site.title }}</title>
         <link rel="shortcut icon" type="image/png" href="{{ 'favicon.png' | relative_url }}">
         <link rel="stylesheet" href="./static/css/main.css">
+        <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.4.0/css/font-awesome.min.css">
         <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
         <script defer src="./static/js/select_navbar.js" type="text/javascript"></script>
         <script defer src="./static/js/select_position.js" type="text/javascript"></script>
