--- a/static/css/experiences.css
+++ b/static/css/experiences.css
@@ -196,6 +196,8 @@ ul.rb li .timestamp {
 
 .skill-content{
     padding-top: 16px;
+    padding-right: 20px;
+    padding-left: 20px;
 }
 
 .skill-name{
@@ -206,7 +208,7 @@ ul.rb li .timestamp {
     padding: 10px 25px;
     color: white;
     font-size: 80%;
-    margin-bottom: 20px;
+    margin-bottom: 6px;
 }
 
 .skill-name::before {
