about css imported

--- a/static/css/main.css
+++ b/static/css/main.css
@@ -1,5 +1,6 @@
 /*** importing css files ***/
 @import "experiences.css";
+@import "about.css";
 
 @import url("https://fonts.googleapis.com/css2?family=PT+Sans&display=swap");
 
