--- a/static/css/about.css
+++ b/static/css/about.css
@@ -12,3 +12,72 @@
         color: rgba(80, 216, 144);
     }
 }
+
+/* CERTIFICATIONS */
+
+.certification-cards {
+    display: grid;
+    grid-template-columns: repeat(3, 1fr);
+    gap: 30px;
+    padding: 80px 40px 40px 80px;
+}
+  
+.certification-card {
+    width: min(100%, 500px);
+    background: rgba(255, 255, 255);
+    border-radius: 16px;
+    font-family: "Poppins", sans-serif;
+    z-index: 5;
+    text-decoration: none;
+}
+  
+.certification-card > img {
+    display: block;
+    width: 100%;
+    max-width: 500px;
+    aspect-ratio: 4/3;
+    object-fit: cover;
+    object-position: 50% 50%;
+    border-radius: 16px 16px 0 0;
+    filter: contrast(70%);
+    transition: all 0.6s cubic-bezier(0.43, 0.41, 0.22, 0.91);
+}
+  
+  .certification-card:hover > img {
+    filter: contrast(100%);
+  }
+  
+  .certification-card-content {
+    display: flex;
+    flex-direction: column;
+    padding: 20px 15px 20px;
+  }
+  
+  .certification-card-content > p {
+    margin-bottom: 10px;
+  }
+  
+  .certification-card-content > p:nth-child(1) {
+    font-size: 1rem;
+    font-weight: 600;
+    margin-bottom: 10px;
+    color: #1e40af;
+  }
+  
+  .certification-card-content > p:nth-child(2) {
+    font-size: 0.8rem;
+    font-weight: 400;
+    color: #6b7280;
+  }
+  
+  @media (max-width: 900px) {
+    .certification-cards {
+       grid-template-columns: repeat(2, 1fr);
+    }
+  }
+  
+  @media (max-width: 500px) {
+    .certification-cards {
+       grid-template-columns: repeat(1, 1fr);
+    }
+  }
