--- a/static/css/about.css
+++ b/static/css/about.css
@@ -49,7 +49,8 @@
   .certification-card-content {
     display: flex;
     flex-direction: column;
-    padding: 15px;
+    padding: 15px 20px;
+    text-align: center;
   }
   
   .certification-card-content > p {
