--- a/static/css/about.css
+++ b/static/css/about.css
@@ -24,7 +24,6 @@
   
 .certification-card {
     width: min(100%, 500px);
-    background: rgba(255, 255, 255);
     border-radius: 16px;
     z-index: 5;
     text-decoration: none;
@@ -34,7 +33,6 @@
     display: block;
     width: 100%;
     max-width: 500px;
-    aspect-ratio: 4/3;
     object-fit: cover;
     object-position: 50% 50%;
     border-radius: 16px 16px 0 0;
@@ -59,9 +57,8 @@
   
   .certification-card-content > p:nth-child(1) {
     font-size: 1rem;
-    font-weight: 600;
     margin-bottom: 10px;
-    color: #1e40af;
+    color: white;
   }
   
   .certification-card-content > p:nth-child(2) {
@@ -76,8 +73,15 @@
     }
   }
   
-  @media (max-width: 500px) {
-    .certification-cards {
-       grid-template-columns: repeat(1, 1fr);
+@media (max-width: 500px) {
+.certification-cards {
+    grid-template-columns: repeat(1, 1fr);
+}
+}
+
+
+@media (hover: hover) {
+    .certification-card:hover img{
+        box-shadow: 0 0 10px rgba(80, 216, 144);;
     }
-  }
+}
