--- a/static/css/about.css
+++ b/static/css/about.css
@@ -17,8 +17,8 @@
 
 .certification-cards {
     display: grid;
-    grid-template-columns: repeat(3, 1fr);
-    gap: 60px;
+    grid-template-columns: repeat(4, 1fr);
+    gap: 40px;
     padding: 40px;
 }
   
@@ -47,7 +47,7 @@
   .certification-card-content {
     display: flex;
     flex-direction: column;
-    padding: 15px 20px;
+    padding: 15px;
     text-align: center;
   }
   
