--- a/static/css/about.css
+++ b/static/css/about.css
@@ -40,43 +40,43 @@
     transition: all 0.6s cubic-bezier(0.43, 0.41, 0.22, 0.91);
 }
   
-  .certification-card:hover > img {
+.certification-card:hover > img {
     filter: contrast(100%);
-  }
-  
-  .certification-card-content {
+}
+
+.certification-card-content {
     display: flex;
     flex-direction: column;
     padding: 15px;
     text-align: center;
-  }
-  
-  .certification-card-content > p {
+}
+
+.certification-card-content > p {
     margin: 0px;
-  }
-  
-  .certification-card-content > p:nth-child(1) {
+}
+
+.certification-card-content > p:nth-child(1) {
     font-size: 1rem;
     margin-bottom: 10px;
     color: white;
-  }
-  
-  .certification-card-content > p:nth-child(2) {
+}
+
+.certification-card-content > p:nth-child(2) {
     font-size: 0.8rem;
     font-weight: 400;
     color: #6b7280;
-  }
-  
-  @media (max-width: 900px) {
+}
+
+@media (max-width: 900px) {
     .certification-cards {
-       grid-template-columns: repeat(2, 1fr);
+        grid-template-columns: repeat(2, 1fr);
     }
-  }
+}
   
 @media (max-width: 500px) {
-.certification-cards {
-    grid-template-columns: repeat(1, 1fr);
-}
+    .certification-cards {
+        grid-template-columns: repeat(1, 1fr);
+    }
 }
 
 @media (hover: hover) {
@@ -90,4 +90,49 @@
     .certification-card:hover .certification-card-content p{
         color: rgba(80, 216, 144);
     }
+}
+
+/* HOBBIES */
+
+.hobby-cards {
+    display: grid;
+    grid-template-columns: repeat(2, 1fr);
+    gap: 30px;
+    padding: 80px 40px 40px 80px;
+}
+
+.card {
+    width: min(100%, 500px);
+    background: rgba(255, 255, 255);
+    border-radius: 16px;
+    font-family: "Poppins", sans-serif;
+    z-index: 5;
+    text-decoration: none;
+    height: 100px;
+}
+
+.card-content {
+    display: flex;
+    flex-direction: column;
+    padding: 20px 15px 20px;
+}
+
+@media (max-width: 900px) {
+    section {
+        grid-template-columns: repeat(2, 1fr);
+    }
+}
+
+@media (max-width: 500px) {
+    section {
+        grid-template-columns: repeat(1, 1fr);
+    }
+}
+
+.hobby-icon {
+    padding: 20px;
+}
+
+.hobby-description {
+    padding-top: 18px;
 }
