--- a/static/css/about.css
+++ b/static/css/about.css
@@ -101,7 +101,7 @@
     padding: 80px 40px 40px 80px;
 }
 
-.card {
+.hobby-card {
     width: min(100%, 500px);
     background: rgba(255, 255, 255);
     border-radius: 16px;
@@ -111,20 +111,20 @@
     height: 100px;
 }
 
-.card-content {
+.hobby-card-content {
     display: flex;
     flex-direction: column;
     padding: 20px 15px 20px;
 }
 
 @media (max-width: 900px) {
-    section {
+    .hobby-cards {
         grid-template-columns: repeat(2, 1fr);
     }
 }
 
 @media (max-width: 500px) {
-    section {
+    .hobby-cards {
         grid-template-columns: repeat(1, 1fr);
     }
 }
