--- a/static/css/about.css
+++ b/static/css/about.css
@@ -7,6 +7,10 @@
     color:white;
 }
 
+.content-section {
+    color: white;
+}
+
 @media (hover: hover) {
     .contact-option i:hover{
         color: rgba(80, 216, 144);
