hobbies bug fixed

--- a/static/css/about.css
+++ b/static/css/about.css
@@ -98,6 +98,12 @@
 
 /* HOBBIES */
 
+.hobby-cards * {
+    margin: 0;
+    padding: 0;
+    box-sizing: border-box;
+  }
+
 .hobby-cards {
     display: grid;
     grid-template-columns: repeat(2, 1fr);
@@ -109,7 +115,6 @@
     width: min(100%, 500px);
     background: rgba(255, 255, 255);
     border-radius: 16px;
-    font-family: "Poppins", sans-serif;
     z-index: 5;
     text-decoration: none;
     height: 100px;
