--- a/static/css/about.css
+++ b/static/css/about.css
@@ -113,7 +113,7 @@
 
 .hobby-card {
     width: min(100%, 500px);
-    background: rgba(255, 255, 255);
+    background: rgba(137, 148, 153, 1);
     border-radius: 16px;
     z-index: 5;
     text-decoration: none;
