css for skills added

--- a/static/css/about.css
+++ b/static/css/about.css
@@ -147,3 +147,53 @@
 .hobby-description {
     padding-top: 4px;
 }
+
+/* SKILLS */
+
+.skill-cards * {
+    margin: 0;
+    padding: 0;
+    box-sizing: border-box;
+  }
+
+.skill-cards {
+    display: grid;
+    grid-template-columns: repeat(3, 1fr);
+    gap: 30px;
+    padding: 40px;
+}
+
+.skill-card {
+    width: min(100%, 500px);
+    background: rgba(137, 148, 153, 1);
+    border-radius: 16px;
+    z-index: 5;
+    text-decoration: none;
+    height: 70px;
+}
+
+.skill-card-content {
+    display: flex;
+    flex-direction: column;
+    padding: 20px 15px 20px 0px;
+}
+
+@media (max-width: 900px) {
+    .skill-cards {
+        grid-template-columns: repeat(2, 1fr);
+    }
+}
+
+@media (max-width: 500px) {
+    .skill-cards {
+        grid-template-columns: repeat(1, 1fr);
+    }
+}
+
+.skill-icon {
+    padding: 20px;
+}
+
+.skill-description {
+    padding-top: 4px;
+}
