--- a/_layouts/template.html
+++ b/_layouts/template.html
@@ -11,6 +11,7 @@
         <script defer src="./static/js/get_role_details.js" type="text/javascript"></script>
         <script defer src="./static/js/select_role_detail.js" type="text/javascript"></script>
         <script defer src="./static/js/get_intro_details.js" type="text/javascript"></script>
+        <script defer src="./static/js/open_skill_details.js" type="text/javascript"></script>
     </head>
     <body>
         <div id="container">
