js element creation

--- a/_layouts/template.html
+++ b/_layouts/template.html
@@ -13,6 +13,7 @@
         <script defer src="./static/js/get_intro_details.js" type="text/javascript"></script>
         <script defer src="./static/js/open_skill_details.js" type="text/javascript"></script>
         <script defer src="./static/js/get_skills.js" type="text/javascript"></script>
+        <script defer src="./static/js/create_skill_cards.js" type="text/javascript"></script>
     </head>
     <body>
         <div id="container">
