--- a/_layouts/template.html
+++ b/_layouts/template.html
@@ -12,6 +12,7 @@
         <script defer src="./static/js/select_role_detail.js" type="text/javascript"></script>
         <script defer src="./static/js/get_intro_details.js" type="text/javascript"></script>
         <script defer src="./static/js/create_skill_cards.js" type="text/javascript"></script>
+        <script defer src="./static/js/create_certification_cards.js" type="text/javascript"></script>
     </head>
     <body>
         <div id="container">
