--- a/_layouts/template.html
+++ b/_layouts/template.html
@@ -8,8 +8,8 @@
         <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
         <script defer src="./static/js/select_navbar.js" type="text/javascript"></script>
         <script defer src="./static/js/create_skill_cards.js" type="text/javascript"></script>
-        <script defer src="./static/js/create_certification_cards.js" type="text/javascript"></script>
-        <script defer src="./static/js/create_hobby_cards.js" type="text/javascript"></script>
+        <!-- <script defer src="./static/js/create_certification_cards.js" type="text/javascript"></script>
+        <script defer src="./static/js/create_hobby_cards.js" type="text/javascript"></script> -->
         <script defer src="./static/js/select_position.js" type="text/javascript"></script>
         <script defer src="./static/js/get_role_details.js" type="text/javascript"></script>
         <script defer src="./static/js/select_role_detail.js" type="text/javascript"></script>
