--- a/_layouts/template.html
+++ b/_layouts/template.html
@@ -13,6 +13,7 @@
         <script defer src="./static/js/select_position.js" type="text/javascript"></script>
         <!-- <script defer src="./static/js/get_role_details.js" type="text/javascript"></script> -->
         <script defer src="./static/js/select_role_detail.js" type="text/javascript"></script>
+        {% block page_specific_scripts %}{% endblock %}
     </head>
     <body>
         <div id="container">
