--- a/_layouts/template.html
+++ b/_layouts/template.html
@@ -6,13 +6,20 @@
         <link rel="stylesheet" href="./static/css/main.css">
         <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.4.0/css/font-awesome.min.css">
         <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
+
+        <script>
+            console.log("HELLO");
+            console.log(page.title);
+        </script>
+
         <script defer src="./static/js/select_navbar.js" type="text/javascript"></script>
         <script defer src="./static/js/create_skill_cards.js" type="text/javascript"></script>
         <script defer src="./static/js/create_certification_cards.js" type="text/javascript"></script>
         <script defer src="./static/js/create_hobby_cards.js" type="text/javascript"></script>
-        <script defer src="./static/js/select_position.js" type="text/javascript"></script>
+
+        <!-- <script defer src="./static/js/select_position.js" type="text/javascript"></script> -->
         <!-- <script defer src="./static/js/get_role_details.js" type="text/javascript"></script> -->
-        <script defer src="./static/js/select_role_detail.js" type="text/javascript"></script>
+        <!-- <script defer src="./static/js/select_role_detail.js" type="text/javascript"></script> -->
     </head>
     <body>
         <div id="container">
@@ -22,13 +29,7 @@
                     <li><a id="experiences" class="nav-item" href="experiences">Experiences</a></li>
                 </ul>
             </nav>
-            {% block content %}
-                {{ content }}
-            {% endblock %}
+            {{ content }}
         </div>
     </body>
-
-    {% block page_specific_scripts %}
-    {% endblock %}
-
 </html>
