--- a/_layouts/template.html
+++ b/_layouts/template.html
@@ -14,7 +14,7 @@
             });
         </script>
 
-        <script defer src="./static/js/populate_about_page.js" type="text/javascript"></script>
+        <script defer src="./static/js/populate_about_page.js" type="module"></script>
 
         <script defer src="./static/js/create_skill_cards.js" type="text/javascript"></script>
         <script defer src="./static/js/create_certification_cards.js" type="text/javascript"></script>
