import skill card creation

--- a/_layouts/template.html
+++ b/_layouts/template.html
@@ -14,9 +14,7 @@
             });
         </script>
 
-        <!-- <script defer src="./static/js/populate_about_page.js" type="module"></script> -->
-
-        <script defer src="./static/js/create_skill_cards.js" type="text/javascript"></script>
+        <script defer src="./static/js/populate_about_page.js" type="module"></script>
 
         <script defer src="./static/js/select_position.js" type="text/javascript"></script>
         <script defer src="./static/js/get_role_details.js" type="text/javascript"></script>
