page title in function

--- a/_layouts/template.html
+++ b/_layouts/template.html
@@ -8,16 +8,10 @@
         <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
 
         <script defer src="./static/js/select_navbar.js" type="text/javascript"></script>
-        <!-- <script type="text/javascript">
-            $(document).ready(function(){
-                console.log("{{ page.title }}")
-            });
-        </script> -->
         <script type="module">
             import { populatePage } from "./static/js/populate_about_page.js";
             $(document).ready(function(){
-                populatePage();
-                console.log("{{ page.title }}")
+                populatePage("{{ page.title }}");
             });
         </script>
 
