--- a/_layouts/template.html
+++ b/_layouts/template.html
@@ -11,7 +11,7 @@
         <script type="module">
             import { populatePage } from "./static/js/populate_about_page.js";
             $(document).ready(function(){
-                populatePage("{{ page.title }}");
+                populatePage("{{ page.name }}");
             });
         </script>
 
