--- a/static/css/about.css
+++ b/static/css/about.css
@@ -256,3 +256,107 @@
 .tab-content[id$="hobbies-about"] {
     border-radius: 10px 0 10px 10px;
 }
+
+/* STUDIES */
+
+.container-of-timeline-of-studies{
+    width:240px;
+    height:auto;
+    float:left;
+}
+
+.timeline-of-studies {
+    width: 50%;
+    display: block;
+    position: relative;
+}
+
+.timeline-of-studies ul.list-of-studies {
+    margin: 2.5em 0;
+    padding: 0;
+    display: inline-block;
+}
+
+.timeline-of-studies ul.list-of-studies li {
+    list-style: none;
+    margin: auto;
+    margin-left: 2em;
+    min-height: 80px;
+    border-left: 1px dashed rgba(137, 148, 153, 1);
+    min-width: 180px;
+    padding: 0 0 50px 30px;
+    position: relative;
+}
+
+.timeline-of-studies ul.list-of-studies li.study-item a {
+    text-decoration: none;
+    top: -12px;
+}
+
+.timeline-of-studies ul.list-of-studies li:last-child {
+    border-left: 0;
+}
+
+.timeline-of-studies ul.list-of-studies li::before {
+    position: absolute;
+    left: -10px;
+    top: -2px;
+    content: " ";
+    border: 4px solid rgba(137, 148, 153, 1);
+    border-radius: 500%;
+    background: #232931;
+    height: 10px;
+    width: 10px;
+    transition: all 250ms ease-in-out;
+}
+
+.timeline-of-studies ul.list-of-studies li.study-item:has(a:hover)::before {
+    border-color: #fff;
+    background: #fff;
+}
+
+.timeline-of-studies ul.list-of-studies li.study-item a:hover div.education-result {
+    color: #fff;
+}
+
+.timeline-of-studies ul.list-of-studies li.study-item a:hover div.education-location {
+    color: #fff;
+}
+
+@keyframes pulse-animation {
+    0% {
+        box-shadow: 0 0 0 0px rgba(102, 255, 153, 0.5);
+    }
+    100% {
+        box-shadow: 0 0 0 14px rgba(0, 0, 0, 0);
+    }
+}
+
+.timeline-of-studies ul.list-of-studies li.study-item.selected::before {
+    border-color: #50d890 !important;
+    background: #50d890 !important;
+    animation: pulse-animation 2s infinite;
+}
+
+.timeline-of-studies ul.list-of-studies li.study-item.selected a div.education-result {
+    color: #fff;
+}
+
+.timeline-of-studies ul.list-of-studies li.study-item.selected a div.education-location {
+    color: #50d890;
+}
+
+.list-of-studies {
+    margin-bottom: 0px;
+}
+
+.education-result {
+    color: rgba(137, 148, 153, 1);
+}
+
+.education-location {
+    color: rgba(137, 148, 153, 1);
+    position: relative;
+    width: 140px;
+    font-size: 12px;
+}
