--- a/_layouts/template.html
+++ b/_layouts/template.html
@@ -15,6 +15,7 @@
             });
         </script>
 
+        <script defer src="./static/js/get_study_details.js" type="text/javascript"></script>
         <script defer src="./static/js/select_position.js" type="text/javascript"></script>
         <script defer src="./static/js/get_role_details.js" type="text/javascript"></script>
         <script defer src="./static/js/select_role_detail.js" type="text/javascript"></script>
