--- a/static/css/main.css
+++ b/static/css/main.css
@@ -36,9 +36,26 @@ body {
 
 .main-title{
     color: white;
+    position: -webkit-sticky;
+    position: sticky;
+    top: 40px;
+    padding-bottom: 20px;
+    background-color: #232931;
+    z-index: 99;
+    padding-top: 10px;
+    margin-top: 0px;
+    margin-bottom: 0px;
 }
 
 /* NAVBAR */
+
+#main-navbar {
+    position: -webkit-sticky;
+    position: sticky;
+    top: 0; 
+    background-color: #232931; 
+    z-index: 99;
+}
 
 #main-navbar ul {
     padding-inline-start: 0px;
