--- a/static/css/about.css
+++ b/static/css/about.css
@@ -400,7 +400,7 @@
 }
 
 #rounded-spacer-for-tab-contents {
-    height: 50px;
+    height: 30px;
     background-color: #181c21;
     margin: 0 2px;
     position: sticky; 
@@ -408,4 +408,8 @@
     background-color: rgb(24, 28, 33); 
     z-index: 99; 
     border-radius: 0px 10px 0px 0px;
+}
+
+.tab-content {
+    border-radius: 0px 0px 10px 10px;
 }
