--- a/static/css/experiences.css
+++ b/static/css/experiences.css
@@ -246,7 +246,7 @@ ul.rb li .timestamp {
 
 .skill-description {
     font-size: 14px;
-    color: black;
+    /* color: black; */
     padding-right: 20px;
     padding-left: 20px;
     padding-bottom: 20px;
