--- a/static/css/about.css
+++ b/static/css/about.css
@@ -115,11 +115,12 @@
 
 .hobby-card {
     width: min(100%, 500px);
-    background: rgba(137, 148, 153, 1);
+    background-color: rgb(53 53 53);
     border-radius: 16px;
     z-index: 5;
     text-decoration: none;
     height: 70px;
+    color: white;
 }
 
 .hobby-card-content {
