--- a/static/css/about.css
+++ b/static/css/about.css
@@ -416,7 +416,11 @@
     border-radius: 0px 0px 10px 10px;
 }
 
-.inline-language-certification {
+.clickable-inline-link {
     text-decoration: none; 
+    color: rgba(80, 216, 144);
+}
+
+.clickable-inline-link:hover {
     color: rgba(80, 216, 144);
 }
