test html snippet include

--- a/_layouts/template.html
+++ b/_layouts/template.html
@@ -28,6 +28,7 @@
                     <li><a id="experiences" class="nav-item" href="experiences">Experiences</a></li>
                 </ul>
             </nav>
+            <div include-html-snippet="./html_snippets/test.html"></div>
             {{ content }}
         </div>
     </body>
