--- a/_layouts/template.html
+++ b/_layouts/template.html
@@ -19,6 +19,7 @@
         <script defer src="./static/js/select_position.js" type="text/javascript"></script>
         <script defer src="./static/js/get_role_details.js" type="text/javascript"></script>
         <script defer src="./static/js/select_role_detail.js" type="text/javascript"></script>
+        <script defer src="./static/js/include-html-snippet.js" type="text/javascript"></script>
     </head>
     <body>
         <div id="container">
