--- a/static/css/about.css
+++ b/static/css/about.css
@@ -126,7 +126,7 @@
 .hobby-card-content {
     display: flex;
     flex-direction: column;
-    padding: 20px 15px 20px 0px;
+    margin: auto 0px;
 }
 
 @media (max-width: 900px) {
