--- a/static/css/about.css
+++ b/static/css/about.css
@@ -113,7 +113,7 @@
     padding: 10px 40px 40px 40px;
 }
 
-.hobby-card {
+.generic-card-with-image {
     width: min(100%, 500px);
     background-color: rgb(53 53 53);
     border-radius: 16px;
@@ -121,9 +121,10 @@
     text-decoration: none;
     height: 70px;
     color: white;
+    display: flex;
 }
 
-.hobby-card-content {
+.content-of-generic-card {
     display: flex;
     flex-direction: column;
     margin: auto 0px;
@@ -141,8 +142,12 @@
     }
 }
 
-.hobby-icon {
+.image-of-generic-card {
     padding: 20px;
+    max-width: 100%; 
+    max-height: 100%; 
+    display: block; 
+    border-radius: 10px;
 }
 
 .hobby-description {
