--- a/static/css/experiences.css
+++ b/static/css/experiences.css
@@ -305,20 +305,14 @@ ul.list-of-experiences li .timestamp {
 /* GENERIC CARD WITHOUT IMAGE */
 
 .generic-card-without-image {
-    width: min(100%, 500px);
     background-color: rgb(53 53 53);
     border-radius: 16px;
-    z-index: 5;
-    text-decoration: none;
     height: 70px;
-    color: white;
+    display: flex;
 }
 
 .content-of-generic-card-without-image {
-    display: flex;
-    flex-direction: column;
-    padding: 0px;
-    margin: 0px auto;
+    margin: auto;
 }
 
 .description-of-generic-card-without-image {
