--- a/static/css/experiences.css
+++ b/static/css/experiences.css
@@ -176,6 +176,7 @@ ul.list-of-experiences li .timestamp {
     background: #181c21;
     margin-left: 2px;
     margin-right: 2px;
+    color: white;
 }
 
 .tab-content[id$="responsibilities"] {
@@ -246,7 +247,6 @@ ul.list-of-experiences li .timestamp {
 
 .skill-description {
     font-size: 14px;
-    /* color: black; */
     padding-right: 20px;
     padding-left: 20px;
     padding-bottom: 20px;
@@ -304,15 +304,8 @@ ul.list-of-experiences li .timestamp {
 
 /* GENERIC CARD WITHOUT IMAGE */
 
-.generic-card-without-image {
-    background-color: rgb(53 53 53);
-    border-radius: 16px;
-    height: 70px;
-    display: flex;
-}
-
 .content-of-generic-card-without-image {
-    margin: auto;
+    margin: 0px auto;
 }
 
 .description-of-generic-card-without-image {
