--- a/_layouts/template.html
+++ b/_layouts/template.html
@@ -4,6 +4,7 @@
         <title>{{ page.title | default: site.title }}</title>
         <link rel="shortcut icon" type="image/png" href="{{ 'favicon.png' | relative_url }}">
         <link rel="stylesheet" href="./static/css/main.css">
+        <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.4.1/css/all.css" integrity="sha384-5sAR7xN1Nv6T6+dT2mhtzEpVJvfS3NScPQTrOxhwjIuvcA67KV2R5Jz6kr4abQsz" crossorigin="anonymous">
         <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.4.0/css/font-awesome.min.css">
         <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
         
