--- a/static/css/about.css
+++ b/static/css/about.css
@@ -425,7 +425,7 @@
 
 ul.ks-cboxtags {
     list-style: none;
-    padding: 20px;
+    padding: 20px 40px;
 }
 ul.ks-cboxtags li{
   display: inline;
@@ -455,7 +455,6 @@ ul.ks-cboxtags li label {
 }
 
 .checkbox-pretext {
-  font-size: 125%;
   padding-right: 10px;
 }
 
