--- a/_layouts/template.html
+++ b/_layouts/template.html
@@ -9,6 +9,7 @@
         <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
         
         <script defer src="./static/js/support_functions.js" type="text/javascript"></script>
+        <script defer src="./static/js/customise_select_tag.js" type="text/javascript"></script>
         <script defer src="./static/js/select_navbar.js" type="text/javascript"></script>
         <script type="module">
             import { populatePage } from "./static/js/populate_page.js";
