--- a/static/css/about.css
+++ b/static/css/about.css
@@ -139,7 +139,7 @@
 .image-of-generic-card {
     padding: 20px;
     max-width: 100%;
-    min-width: 100%;
+    max-height: 100%;
 }
 
 .hobby-description {
