--- a/_layouts/template.html
+++ b/_layouts/template.html
@@ -17,7 +17,7 @@
                 populatePage("{{ page.name }}");
             });
         </script>
-        <script defer src="./static/js/customise_select_tag.js" type="text/javascript"></script>
+        <!-- <script defer src="./static/js/customise_select_tag.js" type="text/javascript"></script> -->
         <script defer src="./static/js/select_position.js" type="text/javascript"></script>
     </head>
     <body>
