--- a/_layouts/template.html
+++ b/_layouts/template.html
@@ -8,6 +8,7 @@
         <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.4.0/css/font-awesome.min.css">
         <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
         
+        <script defer src="./static/js/customise_select_tag.js" type="text/javascript"></script>
         <script defer src="./static/js/support_functions.js" type="text/javascript"></script>
         
         <script defer src="./static/js/select_navbar.js" type="text/javascript"></script>
@@ -17,7 +18,6 @@
                 populatePage("{{ page.name }}");
             });
         </script>
-        <!-- <script defer src="./static/js/customise_select_tag.js" type="text/javascript"></script> -->
         <script defer src="./static/js/select_position.js" type="text/javascript"></script>
     </head>
     <body>
