--- a/static/css/about.css
+++ b/static/css/about.css
@@ -621,3 +621,25 @@ ul.ks-cboxtags li input[type="checkbox"] {
     padding-left: 40px;
     padding-right: 20px;
   }
+
+  .intro {
+    width: auto; 
+    background-color: #181c21;
+    border: 10px solid #181c21;
+    border-radius: 10px;
+    height: 300px;
+    display: flex;
+    color: white;
+    margin: 0px 2px;
+  }
+
+  .intro-image {
+    max-width: 100%; 
+    max-height: 100%; 
+    display: block; 
+    border-radius: 10px;
+  }
+
+  .intro-text {
+    padding-top: 16px;
+  }
