--- a/static/css/experiences.css
+++ b/static/css/experiences.css
@@ -326,7 +326,7 @@ ul .main-responsibility:last-child {
 .responsibility-summary {
     padding: 1rem;
     display: block;
-    background: #333;
+    background: rgb(53 53 53);
     padding-left: 2.2rem;
     position: relative;
     cursor: pointer;
